examples/fixtures/demo-dev-v1.template.json
{
 "Resources": {
  "EcsVpcCEF3634B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/Resource"
   }
  },
  "EcsVpcPublicSubnet1Subnet4FC26CFD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet1/Subnet"
   }
  },
  "EcsVpcPublicSubnet1RouteTable3F836709": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet1/RouteTable"
   }
  },
  "EcsVpcPublicSubnet1RouteTableAssociation27B0B1F1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsVpcPublicSubnet1RouteTable3F836709"
    },
    "SubnetId": {
     "Ref": "EcsVpcPublicSubnet1Subnet4FC26CFD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "EcsVpcPublicSubnet1DefaultRoute29B4D851": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcsVpcIGWF80402C4"
    },
    "RouteTableId": {
     "Ref": "EcsVpcPublicSubnet1RouteTable3F836709"
    }
   },
   "DependsOn": [
    "EcsVpcVPCGWE2526015"
   ],
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "EcsVpcPublicSubnet1EIP97CC60E8": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet1/EIP"
   }
  },
  "EcsVpcPublicSubnet1NATGateway84F4640B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EcsVpcPublicSubnet1EIP97CC60E8",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EcsVpcPublicSubnet1Subnet4FC26CFD"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "EcsVpcPublicSubnet1DefaultRoute29B4D851",
    "EcsVpcPublicSubnet1RouteTableAssociation27B0B1F1"
   ],
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet1/NATGateway"
   }
  },
  "EcsVpcPublicSubnet2Subnet127B1F4A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet2/Subnet"
   }
  },
  "EcsVpcPublicSubnet2RouteTable259A8B2D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet2/RouteTable"
   }
  },
  "EcsVpcPublicSubnet2RouteTableAssociation6449DB9B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsVpcPublicSubnet2RouteTable259A8B2D"
    },
    "SubnetId": {
     "Ref": "EcsVpcPublicSubnet2Subnet127B1F4A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "EcsVpcPublicSubnet2DefaultRouteD785541D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcsVpcIGWF80402C4"
    },
    "RouteTableId": {
     "Ref": "EcsVpcPublicSubnet2RouteTable259A8B2D"
    }
   },
   "DependsOn": [
    "EcsVpcVPCGWE2526015"
   ],
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "EcsVpcPrivateSubnet1SubnetDE1C6717": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet1/Subnet"
   }
  },
  "EcsVpcPrivateSubnet1RouteTable44D603B2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet1/RouteTable"
   }
  },
  "EcsVpcPrivateSubnet1RouteTableAssociationA072EBC4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsVpcPrivateSubnet1RouteTable44D603B2"
    },
    "SubnetId": {
     "Ref": "EcsVpcPrivateSubnet1SubnetDE1C6717"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "EcsVpcPrivateSubnet1DefaultRoute523B7F1A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcsVpcPublicSubnet1NATGateway84F4640B"
    },
    "RouteTableId": {
     "Ref": "EcsVpcPrivateSubnet1RouteTable44D603B2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "EcsVpcPrivateSubnet2Subnet4E5EDAB1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet2/Subnet"
   }
  },
  "EcsVpcPrivateSubnet2RouteTable1CB3B77F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet2/RouteTable"
   }
  },
  "EcsVpcPrivateSubnet2RouteTableAssociation136FEFD9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsVpcPrivateSubnet2RouteTable1CB3B77F"
    },
    "SubnetId": {
     "Ref": "EcsVpcPrivateSubnet2Subnet4E5EDAB1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "EcsVpcPrivateSubnet2DefaultRoute1D92C4ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcsVpcPublicSubnet1NATGateway84F4640B"
    },
    "RouteTableId": {
     "Ref": "EcsVpcPrivateSubnet2RouteTable1CB3B77F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "EcsVpcIGWF80402C4": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "demo-dev/EcsVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/IGW"
   }
  },
  "EcsVpcVPCGWE2526015": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "EcsVpcIGWF80402C4"
    },
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsVpc/VPCGW"
   }
  },
  "EcsCluster97242B84": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enhanced"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/EcsCluster/Resource"
   }
  },
  "HelloWorldServiceLB7C80B268": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "HelloWorldServiceLBSecurityGroup05C4B30B",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "EcsVpcPublicSubnet1Subnet4FC26CFD"
     },
     {
      "Ref": "EcsVpcPublicSubnet2Subnet127B1F4A"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "EcsVpcPublicSubnet1DefaultRoute29B4D851",
    "EcsVpcPublicSubnet1RouteTableAssociation27B0B1F1",
    "EcsVpcPublicSubnet2DefaultRouteD785541D",
    "EcsVpcPublicSubnet2RouteTableAssociation6449DB9B"
   ],
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/LB/Resource"
   }
  },
  "HelloWorldServiceLBSecurityGroup05C4B30B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB demodevHelloWorldServiceLB336CD0FA",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/LB/SecurityGroup/Resource"
   }
  },
  "HelloWorldServiceLBSecurityGrouptodemodevHelloWorldServiceSecurityGroupBD71156A80156B1D16": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceSecurityGroup5F3BD4A7",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceLBSecurityGroup05C4B30B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/LB/SecurityGroup/to demodevHelloWorldServiceSecurityGroupBD71156A:80"
   }
  },
  "HelloWorldServiceLBPublicListener22A49231": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "HelloWorldServiceLBPublicListenerECSGroup63BD356F"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "HelloWorldServiceLB7C80B268"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/LB/PublicListener/Resource"
   }
  },
  "HelloWorldServiceLBPublicListenerECSGroup63BD356F": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/",
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "HelloWorldServiceTaskDefTaskRole0AF7155B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/TaskDef/TaskRole/Resource"
   }
  },
  "HelloWorldServiceTaskDef17C5487C": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": "amazon/amazon-ecs-sample",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "HelloWorldServiceTaskDefwebLogGroup85B2B7D4"
        },
        "awslogs-stream-prefix": "HelloWorldService",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "HelloWorldServiceTaskDefExecutionRole19BA93E1",
      "Arn"
     ]
    },
    "Family": "demodevHelloWorldServiceTaskDef33CD2655",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "HelloWorldServiceTaskDefTaskRole0AF7155B",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/TaskDef/Resource"
   }
  },
  "HelloWorldServiceTaskDefwebLogGroup85B2B7D4": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/TaskDef/web/LogGroup/Resource"
   }
  },
  "HelloWorldServiceTaskDefExecutionRole19BA93E1": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/TaskDef/ExecutionRole/Resource"
   }
  },
  "HelloWorldServiceTaskDefExecutionRoleDefaultPolicyDAAEB0BF": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "HelloWorldServiceTaskDefwebLogGroup85B2B7D4",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "HelloWorldServiceTaskDefExecutionRoleDefaultPolicyDAAEB0BF",
    "Roles": [
     {
      "Ref": "HelloWorldServiceTaskDefExecutionRole19BA93E1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "HelloWorldService36ED7EB6": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "EcsCluster97242B84"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 2,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "HelloWorldServiceLBPublicListenerECSGroup63BD356F"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "HelloWorldServiceSecurityGroup5F3BD4A7",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "EcsVpcPrivateSubnet1SubnetDE1C6717"
       },
       {
        "Ref": "EcsVpcPrivateSubnet2Subnet4E5EDAB1"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "HelloWorldServiceTaskDef17C5487C"
    }
   },
   "DependsOn": [
    "HelloWorldServiceLBPublicListenerECSGroup63BD356F",
    "HelloWorldServiceLBPublicListener22A49231",
    "HelloWorldServiceTaskDefTaskRole0AF7155B"
   ],
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/Service/Service"
   }
  },
  "HelloWorldServiceSecurityGroup5F3BD4A7": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "demo-dev/HelloWorldService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "EcsVpcCEF3634B"
    }
   },
   "DependsOn": [
    "HelloWorldServiceTaskDefTaskRole0AF7155B"
   ],
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/Service/SecurityGroup/Resource"
   }
  },
  "HelloWorldServiceSecurityGroupfromdemodevHelloWorldServiceLBSecurityGroup1B22B0D3807D8C0958": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceSecurityGroup5F3BD4A7",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceLBSecurityGroup05C4B30B",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "DependsOn": [
    "HelloWorldServiceTaskDefTaskRole0AF7155B"
   ],
   "Metadata": {
    "aws:cdk:path": "demo-dev/HelloWorldService/Service/SecurityGroup/from demodevHelloWorldServiceLBSecurityGroup1B22B0D3:80"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S227CMAz9lr2HbCriAxhjCAltVYt4RWlqOkNIqlyKUNV/X5pS2rFpTz4+PY7t40Y0ms7oyxO7mAnPTxOBGa1Ty/iJeGpfA49ovSs5WRzkLl6Q2GUCeeoyCbblBpQoZ2HLMgEDP3BzYxRHZlHJu7gFy3Xchg9mV8zChV1JrLHycHh4LS1oj3tBN8ktm1s/69cZpCUpcKfRXldauTLM8C+xLDQY84tey8A3BLih9UI447u3qh6+M12wditzeoMDSux3emSUtAwl6BF3q01BV8g7nzoY2u1LZttVDZ2XpXc5uLVRLH9lgkkO+UM5CGYscuEVWVCgLCp/rr+rwxI/8rEO/W7ypunx6PvWd/YX6I0cpQ1BdqZ1orq7hxgrXxcO1aGGCFV4NzequD/R46YhCRjldOfHp7Olsw2RKgd6NM9VNKNT/38eDeJEO2nxDDTp4jd6Zn3jv [...]
   },
   "Metadata": {
    "aws:cdk:path": "demo-dev/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "HelloWorldServiceLoadBalancerDNS55FD1E3C": {
   "Value": {
    "Fn::GetAtt": [
     "HelloWorldServiceLB7C80B268",
     "DNSName"
    ]
   }
  },
  "HelloWorldServiceServiceURL51B6A3C0": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "HelloWorldServiceLB7C80B268",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
